[package]
name = "monitoring-test"
version = "0.1.0"
authors = ["Adrian Nagy <adrian.nagy@viablesystems.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4"
warp = "0.3"
tokio = { version = "1.8", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
clap = "2.33"
reqwest = { version = "0.11", features = ["json"] }
prctl = "1"